@@ -279,7 +279,6 @@ C_LIB = \
 	stdlib_checkdetach.o \
 	stdlib_constructor.o \
 	stdlib_constructor_begin.o \
-	stdlib_data.o \
 	stdlib_default_pool_size.o \
 	stdlib_default_puddle_size.o \
 	stdlib_destructor.o \
