@@ -382,7 +382,6 @@ STDLIB_OBJ = \
 	stdlib_checkdetach.o \
 	stdlib_constructor_begin.o \
 	stdlib_constructor.o \
-	stdlib_data.o \
 	stdlib_default_pool_size.o \
 	stdlib_default_puddle_size.o \
 	stdlib_destructor.o \
@@ -651,8 +650,6 @@ stdlib_setjmp.o : stdlib_setjmp.asm
 stdlib_swapstack.o : stdlib_swapstack.asm
 
 stdio_fdhookentry.o : stdio_fdhookentry.c stdlib_mem_debug.h
-
-stdlib_data.o : stdlib_data.c stdlib_mem_debug.h
 
 stdio_openiob.o : stdio_openiob.c stdlib_mem_debug.h
 
