@@ -66,6 +66,10 @@ static BPTR input;
 
 /****************************************************************************/
 
+struct WBStartup * __WBenchMsg;
+
+/****************************************************************************/
+
 CLIB_DESTRUCTOR(workbench_exit)
 {
 	ENTER();
