@@ -43,12 +43,6 @@
 
 /****************************************************************************/
 
-/* The file descriptor table. */
-struct fd **	__fd;
-int				__num_fd;
-
-/****************************************************************************/
-
 int
 __grow_fd_table(int max_fd)
 {
