@@ -43,12 +43,6 @@
 
 /****************************************************************************/
 
-/* The file handle table. */
-struct iob **	__iob;
-int				__num_iob;
-
-/****************************************************************************/
-
 int
 __grow_iob_table(int max_iob)
 {
