@@ -47,6 +47,18 @@
 
 /****************************************************************************/
 
+/* The file handle table. */
+struct iob **	__iob;
+int				__num_iob;
+
+/****************************************************************************/
+
+/* The file descriptor table. */
+struct fd **	__fd;
+int				__num_fd;
+
+/****************************************************************************/
+
 void
 __close_all_files(void)
 {
