@@ -37,6 +37,10 @@
 
 /****************************************************************************/
 
+extern BOOL NOCOMMON __stack_overflow;
+
+/****************************************************************************/
+
 #if defined(__GNUC__)
 
 /****************************************************************************/
